# akribia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  mkdocs.yml  pyproject.toml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  new_profile_proposal.yml
.github/workflows/: build-wheels.yml  ci.yml  gui.yml  pages.yml  publish-pypi.yml  python.yml  release.yml  rust.yml  validation.yml
akribia/: __init__.py  _core_fallback.py  cli.py  core.py  schema.py  seeding.py
akribia/profiles/: __init__.py  adhd_discounting.py  adhd_rpe_noise.py  audhd_emotion_dysregulation.py  autism_overfitting.py  autism_weak_prior.py  base.py  comorbid.py  ppcs_forward_model.py
akribia/tasks/: __init__.py  _common.py  delay_discounting_task.py  illusion_task.py  multi_task_battery.py  perturbation_recovery_task.py  self_motion_task.py  volatility_learning_task.py
akribia/validation/: __init__.py  against_hgf_toolbox.py  parameter_recovery.py  sensitivity.py
akribia/viz/: __init__.py  comparison_grid.py  precision_dashboard.py  style.py
benches/: py_kalman_bench.py
core/: Cargo.toml
core/benches/: kalman_bench.rs  sweep_bench.rs
core/src/: error.rs  forward_model.rs  hgf.rs  kalman.rs  lib.rs  python.rs  td_learning.rs
docs/: BENCHMARKS.md  GLOSSARY.md  LIMITATIONS.md  THEORY.md  architecture.md  index.md  references.bib
gui/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
gui/src/: App.tsx  index.css
gui/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  main.rs
gui/src/components/: About.tsx  Dashboard.tsx  ParameterPanel.tsx  ProfileSelector.tsx  TaskChart.tsx  charts.tsx
gui/src/components/ui/: card.tsx  slider.tsx
gui/src/lib/: engine.ts  profiles.ts  tauri-bridge.ts
notebooks/: 00_golden_path.ipynb  adhd.ipynb  autism.ipynb  ppcs.ipynb
schemas/: task_result.json
tests/: conftest.py  test_core_properties.py  test_predictions.py  test_profiles.py  test_pyo3_integration.py  test_schema_conformance.py
wiki/: Architecture-Decisions.md  FAQ-Limitations.md  Home.md  Math-Reference.md  Profile-Catalog.md  Validation-Methodology.md
