# gui/src-tauri is its own workspace (note the [workspace] table below), NOT a
# member of the root workspace. Rationale (ADR-010, docs/architecture.md): the
# root workspace pins Rust 1.78 to preserve the validated numerical core's
# reproducibility guarantee, but Tauri 2's dependency tree needs a newer
# toolchain. Keeping the GUI as a separate workspace lets it build under current
# stable (gui.yml) while still linking core DIRECTLY via the path dependency
# below — "the GUI calls core/ directly" (spec 11.1) is satisfied by the path
# dep, independent of workspace membership.
[workspace]

[package]
name = "akribia-gui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tauri desktop shell for akribia — interactive precision-profile exploration."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
akribia-core = { path = "../../core" }   # links the core crate DIRECTLY (spec 11.1)
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
